-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: hs25
-
Component/s: hotspot
-
b63
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8031228 | 9 | Harold Seigel | P2 | Closed | Fixed | b02 |
| JDK-8030902 | 8u5 | Harold Seigel | P2 | Resolved | Fixed | b02 |
| JDK-8030669 | 8 | Harold Seigel | P2 | Closed | Fixed | b121 |
- backported by
-
JDK-8030902 Interface Method Resolution should skip static and non-public methods in j.l.Object
-
- Resolved
-
-
JDK-8030669 Interface Method Resolution should skip static and non-public methods in j.l.Object
-
- Closed
-
-
JDK-8031228 Interface Method Resolution should skip static and non-public methods in j.l.Object
-
- Closed
-
- relates to
-
JDK-8026066 InvokeInterface needs to throw ICCE for static methods
-
- Closed
-
-
JDK-8028626 invokeinterface selects the static Object.registerNatives method
-
- Closed
-
-
JDK-8026394 Eclipse fails with JDK8 build 111
-
- Closed
-
-
JDK-8024804 Crash when InterfaceMethodref resolves to Object.registerNatives
-
- Closed
-