8028741: Interface Method Resolution should skip static and non-public methods in j.l.Object

Implementation of JDK 8 JVMS 5.4.3.4 specification change to skip static and non-public methods of java.lang.Object for interface method resolution.

Reviewed-by: acorn, coleenp